--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -8,6 +8,8 @@ img {
 }
 
 .title {
+  display: flex;
+  justify-content: center;
   font-size: 36px;
   font-weight: 900;
 }
@@ -23,4 +25,27 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+
+
+}
+.main { 
+  display: flex; 
+  margin-top: 32px;
+  justify-content: space-around; 
+  gap: 52px;
+  align-items: center; 
+  
+  
+  }
+
+
+.item {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 200px;
+  align-items: center;
+}
+
+.text {
+  text-align: center;
 }
