--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
+  margin-top: 20px;
 }
 
 input {
@@ -23,4 +27,47 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+  margin-top: 20px;
 }
+
+.footer {
+  display: flex;
+  margin-top: auto;
+  justify-content: space-between;
+  background-color: #eeeeee;
+  padding: 10px;
+
+}
+
+.header{
+  display: flex;
+  margin-bottom: auto;
+  justify-content: space-between;
+  padding: 5px;
+  
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+}
+
+ul{
+  font-size: medium;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  list-style-type: none;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 5px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
